# slambook2-practice

./: .gitignore
ch2/: CMakeLists.txt  build.sh  libHelloSLAM.cpp
ch3/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortedImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: CMakeLists.txt  build.sh  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
